# Remote-Skill

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.toml
config/app_overrides/: legacy-erp.toml  slack.toml
core/: audit.py  com_threading.py  config.py  handle_cache.py  logging.py  middleware.py  retry.py  selector.py
engines/: autohotkey_adapter.py  flaui_adapter.py  playwright_adapter.py  pywinauto_adapter.py  tesseract_adapter.py  win32_adapter.py  winappdriver_adapter.py
scripts/: disable_notifications.ps1  enable_rdpwrap.ps1  install_service.ps1  install_virtual_display.ps1  setup_agent_user.ps1  setup_openssh.ps1  setup_winrm.ps1
scripts/client_configs/: claude_code.json  claude_desktop.json
server/: guardrail.py  main.py  transport_stdio.py  transport_tcp.py
skills/: actions.py  browser.py  dialogs.py  discovery.py  lifecycle.py  safety.py  sessions.py  waits.py
tests/: conftest.py
tests/integration/: test_calculator.py  test_notepad.py
tests/unit/: test_actions.py  test_audit.py  test_browser.py  test_com_threading.py  test_config.py  test_dialogs.py  test_discovery.py  test_guardrail.py  test_handle_cache.py  test_lifecycle.py  test_middleware.py  test_retry.py  test_safety.py  test_selector.py  test_server.py  test_sessions.py  test_virtual_drag.py  test_waits.py
