[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdg-windows-agent"
version = "0.1.0"
description = "AI agent system that controls Windows apps in the background via UI Automation"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pywinauto>=0.6.8",
    "pywin32>=306",
    "comtypes>=1.4.0",
    "playwright>=1.40.0",
    "structlog>=24.0.0",
    "psutil>=5.9.0",
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
cdg-agent = "server.main:main"

# Tell hatchling which top-level dirs make up the package. Without this it
# looks for a single dir matching the project name (cdg_windows_agent) and
# fails metadata generation with "no directory matches the name of your project".
[tool.hatch.build.targets.wheel]
packages = ["server", "core", "engines", "skills"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
